# advent-of-code-2018

haskell/: .gitignore  aoc2018-haskell.cabal  stack.yaml
haskell/app/: Day1App.hs  Day2App.hs  Day3App.hs
haskell/src/: Day1.hs  Day2.hs  Day3.hs  Helpers.hs
haskell/test/: Day1Spec.hs  Day2Spec.hs  Day3Spec.hs  Spec.hs
